--- a/Angular/package.json
+++ b/Angular/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "crypto-js": "^4.1.1",
     "firebase": "^9.6.11",
     "jquery": "^3.6.0",
+    "js-sha512": "^0.8.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
